--- a/Front End Development Libraries/Calculator/Calculator.html
+++ b/Front End Development Libraries/Calculator/Calculator.html
@@ -4,7 +4,7 @@
     <title>Calculator</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="./styles.css"/>
+    <link rel="stylesheet" href="./CSS/styles.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap" rel="stylesheet">
 
@@ -18,6 +18,6 @@
   <body>
     <main>
     </main>
-    <script src="./script-compiled.js"></script>
+    <script src="./JS/script-compiled.js"></script>
   </body>
 </html>
