--- a/Front End Development Libraries/Session + Break Clock/Clock.html
+++ b/Front End Development Libraries/Session + Break Clock/Clock.html
@@ -4,7 +4,7 @@
     <title>Random Quote Machine</title>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <link rel="stylesheet" href="./styles.css"/>
+    <link rel="stylesheet" href="./CSS/styles.css"/>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css">
 
     <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
@@ -17,6 +17,6 @@
   <body>
     <main>
     </main>
-    <script src="./script-compiled.js"></script>
+    <script src="./JS/script-compiled.js"></script>
   </body>
 </html>
